minor fix to cards in dark mode

--- a/src/stylesheets/layout.scss
+++ b/src/stylesheets/layout.scss
@@ -489,7 +489,6 @@ footer {
             }
         }
         .card {
-            background: $dark-block-bg;
             img {
                 opacity: .75;
             }
